// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReaktorAlgoliaSettingsForm with settings 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Algolia App Id:
      <input
        name="appId"
        onChange={[Function]}
        type="text"
        value="appId"
      />
    </label>
  </div>
  <div>
    <label>
      Algolia Admin API Key
      <input
        name="adminApiKey"
        onChange={[Function]}
        type="text"
        value="adminApiKey"
      />
    </label>
  </div>
  <div>
    <label>
      Algolia Search Only API Key
      <input
        name="searchOnlyApiKey"
        onChange={[Function]}
        type="text"
        value="searchOnlyApiKey"
      />
    </label>
  </div>
  <div>
    <label>
      Algolia Products Index Name
      <input
        label="Algolia Products Index Name"
        name="productsIndex"
        onChange={[Function]}
        type="text"
        value="productsIndex"
      />
    </label>
  </div>
  <button
    className="btn btn-primary pull-right"
    type="submit"
  >
    Save Changes
  </button>
</form>
`;

exports[`ReaktorAlgoliaSettingsForm without settings 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Algolia App Id:
      <input
        name="appId"
        onChange={[Function]}
        type="text"
      />
    </label>
  </div>
  <div>
    <label>
      Algolia Admin API Key
      <input
        name="adminApiKey"
        onChange={[Function]}
        type="text"
      />
    </label>
  </div>
  <div>
    <label>
      Algolia Search Only API Key
      <input
        name="searchOnlyApiKey"
        onChange={[Function]}
        type="text"
      />
    </label>
  </div>
  <div>
    <label>
      Algolia Products Index Name
      <input
        label="Algolia Products Index Name"
        name="productsIndex"
        onChange={[Function]}
        type="text"
      />
    </label>
  </div>
  <button
    className="btn btn-primary pull-right"
    type="submit"
  >
    Save Changes
  </button>
</form>
`;
